--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,6 +12,7 @@
 
     <application
         android:allowBackup="true"
+        android:name=".app.MyApplication"
         android:icon="@mipmap/icon_school"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/icon_school"
