--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -44,7 +44,7 @@
         <activity android:name=".activity.attence.ExcelActivity" />
         <activity android:name=".activity.student.AddStudentActivity" />
         <activity android:name=".activity.student.StudentNameActivity" />
-        <activity android:name=".activity.attence.ChangeAttResultActivity" />
+        <activity android:name=".activity.attence.EditAttResultActivity" />
 
         <provider
             android:name=".contentprovider.UnKnownProvider"
