--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -52,6 +52,7 @@
             android:exported="false" />
 
         <activity android:name=".activity.student.QueryStudentActivity"></activity>
+        <activity android:name=".activity.attence.AttResultSearchResultActivity" />
     </application>
 
 </manifest>
